--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
     </div>
     <center><h1 id="wallpapers" style="color: #fff;">free wallpapers:</h1></center>
-  <center><img onclick="https://bulletprofitsmartlink.com/smart-link/121205/4" style="margin-bottom: 20px;" src="wallpaper1.jpg"></center>
-  <center><a class="d1button" download href="wallpaper1.jpg">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
+  <center><img style="margin-bottom: 20px;" src="wallpaper1.jpg"></center>
+  <center><a class="d1button" download="wallpaper1.jpg" href="https://bulletprofitsmartlink.com/smart-link/121205/4">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
   <center><img style="margin-bottom: 20px; margin-top: 20px;" src="wallpaper2.png" width="200" height="300"></center>
   <center><a class="d1button" download href="wallpaper2.png">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
   <center><img style="margin-bottom: 20px; margin-top: 20px;" src="wallpaper3.jpg" width="200" height="300"></center>
