--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
   <center><a class="d1button" download href="wallpaper49.jpg">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
   <center><img style="margin-bottom: 20px; margin-top: 20px;" src="wallpaper50.png" width="200" height="300"></center>
   <center><a class="d1button" download href="wallpaper50.png">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
-  <center><a class="d1button" href="https://bulletprofitsmartlink.com/smart-link/121205/4">show ad</a></center>
+    <br>
+    <br>
+    <br>
+    please see some ads
+    <br>
+    <center><a class="d1button" href="https://bulletprofitsmartlink.com/smart-link/121205/4">show ad</a></center>
   
     </body>
 </html>
