--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
   <center><img style="margin-bottom: 20px; margin-top: 20px;" src="wallpaper49.jpg" width="200" height="300"></center>
   <center><a class="d1button" download href="wallpaper49.jpg">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>
   <center><img style="margin-bottom: 20px; margin-top: 20px;" src="wallpaper50.png" width="200" height="300"></center>
+  <center><a class="d1button" download href="wallpaper50.jpg">DOWNLOAD <img style="background: transparent;" src="download.png" width="20" height="20"></a></center>  
     </body>
 </html>
